tilt points, old js/css, chartjs...

--- a/flaskr/static/css/404.css
+++ b/flaskr/static/css/404.css
@@ -1,27 +1,39 @@
-/**
- * Copyright (C) 2015 Pimpositor
- * License: http://www.gnu.org/licenses/gpl.html GPL version 2 or higher
- *
- * Some open source application is free software: you can redistribute
- * it and/or modify it under the terms of the GNU General Public
- * License as published by the Free Software Foundation, either
- * version 3 of the License, or (at your option) any later version.
- *
- * Some open source application is distributed in the hope that it will
- * be useful, but WITHOUT ANY WARRANTY; without even the implied warranty
- * of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- * <http://www.gnu.org/licenses/>.
- *
- * @license GPL-3.0+ <http://spdx.org/licenses/GPL-3.0+>
-*/
+@font-face {
+  font-family: 'Swiftel';
+  src: url('../fonts/Swiftel.woff2') format('woff2'),
+       url('../fonts/Swiftel.woff') format('woff'),
+       url('../fonts/Swiftel.ttf') format('truetype');
+}
 
 body {
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin: 1rem auto;
     background: none;
     color: #fff;
+}
+
+.tilt-font {
+    font-family: 'Swiftel';
+    color: #ff6900;
+    text-decoration: none;
+    font-size: 36pt;
+}
+
+.tilt-font:hover {
+    text-decoration: underline;
+}
+
+.container {
+  margin: auto;
+  display: inline-block;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 50%;
+  height: 300px;
+  background-color: rgba(0,0,0,0.5);
+  text-align: center;
 }
 
 .full {
@@ -32,15 +44,3 @@ body {
   background-size: cover;
 }
 
-.jumbotron {
-    color: #fff;
-    background-color: rgba(255,255,255, 0.5);
-}
-
-.vertical-center {
-  min-height: 80%;  /* Fallback for browsers do NOT support vh unit */
-  min-height: 80vh; /* These two lines are counted as one :-)       */
-
-  display: flex;
-  align-items: center;
-}
