--- a/flaskr/templates/404.html
+++ b/flaskr/templates/404.html
@@ -8,24 +8,17 @@
         <meta name="author" content="Patilla Code">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>tilt-o-meter</title>
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/404.css') }}">
     </head>
     <body class="full">
         <div class="container">
-            <div class="vertical-center">
-                <div class="container text-center lead">
-                    {% if error %}
-                       <p>{{error}}</p>
-                    {% else %}
-                        <p>Oops</p>
-                        <p>Something went wrong.</p>
-                    {% endif %}
-                    <a href="/" role="button" type="button" class="btn-lg btn-danger">
-                        Go back!
-                    </a>
-                </div>
-            </div>
+            {% if error %}
+               <p>{{error}}</p>
+            {% else %}
+                <p>Oops</p>
+                <p>Something went wrong.</p>
+            {% endif %}
+            <a href="/" type="button" class="tilt-font">Go back!</a>
         </div>
     </body>
 </html>
