--- a/flaskr/static/css/404.css
+++ b/flaskr/static/css/404.css
@@ -30,8 +30,8 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  width: 50%;
-  height: 300px;
+/*   width: 50%;
+  height: 300px; */
   background-color: rgba(0,0,0,0.5);
   text-align: center;
 }
