--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -28,7 +28,7 @@
                     <input type="text" class="" name="summoner_name" placeholder="Summoner Name" required>
                 </div>
                 <div class="form__actions">
-                    <button type="submit" class="form__submit tilt-font" onclick="sendForm();">Calculate tilt!</button>
+                    <button type="submit" class="form__submit" onclick="sendForm();">Calculate tilt!</button>
                 </div>
             </form>
         </section>
