--- a/flaskr/templates/tiltometer.html
+++ b/flaskr/templates/tiltometer.html
@@ -1,105 +1,84 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>tilt-o-meter</title>
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/tiltometer.css') }}">
-        <script type="text/javascript" src="{{ url_for('static', filename='js/chart.min.js') }}" async></script>
-        <script type="text/javascript" src="{{ url_for('static', filename='js/tiltometer.js') }}" async></script>
-    </head>
-    <body>
-        <header class="header">
-            <h1 class="text-center"><a href="/" class="tilt-font header__link">tilt-o-meter</a></h1>
-        </header>
+{% extends 'base.html' %}
 
-        <section class="tilt-container">
-            <input type="hidden" id="tilt-value" name="tilt-value" value="{{ data.tilt_level}}">
-            <div class="tilt-container__chart">
-                <canvas id="tilt-chart"></canvas>
-            </div>
-        </section>
+{% block title %}tilt-o-stats | {% endblock %}
 
-        <hr class="separator">
-
-        <section class="container">
-            <form class="form" method="post" onsubmit="return false;">
-                <div class="form__fields">
-                    <select name="region">
-                        <option value="br1">BR</option>
-                        <option value="eune1">EUNE</option>
-                        <option value="euw1" selected="selected">EUW</option>
-                        <option value="kr1">KR</option>
-                        <option value="lan1">LAN</option>
-                        <option value="las1">LAS</option>
-                        <option value="na1">NA</option>
-                        <option value="oce1">OCE</option>
-                        <option value="ru1">RU</option>
-                        <option value="tr1">TR</option>
-                    </select>
-
-                    <input type="text" class="" name="summoner_name" placeholder="Summoner Name" required>
-                </div>
-                <div class="form__actions">
-                    <button type="submit" class="form__submit" onclick="sendForm();">Calculate tilt!</button>
-                </div>
-            </form>
-        </section>
-
-        <hr class="separator">
-
-        <section>
-            <table class="data_table">
-                <thead>
-                    <tr>
-                        <th>Champion</th>
-                        <th>KDA</th>
-                        <th>Time</th>
-                        {# <th>Lane</th> #}
-                        {# <th>Type</th> #}
-                        <th>Mode</th>
-                        <th>Date</th>
-                        {# <th>Tilt</th> #}
-                        <th colspan="2"></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for item in data.stats %}
-                        {% if item.pentakill %}
-                            <tr class="pentakill">
-                        {% else%}
-                            <tr>
-                        {% endif %}
-                            <td><img class="champion-logo" src="{{ item.champion_img }}" alt=""></td>
-                            {% if item.kda<1 %}
-                                <td class="kda_1">{{ item.kills }}/{{ item.deaths }}/{{ item.assists }}</td>
-                            {% elif item.kda<2 %}
-                                <td class="kda_2">{{ item.kills }}/{{ item.deaths }}/{{ item.assists }}</td>
-                            {% elif item.kda<3 %}
-                                <td class="kda_3">{{ item.kills }}/{{ item.deaths }}/{{ item.assists }}</td>
-                            {% else %}
-                                <td class="kda_4">{{ item.kills }}/{{ item.deaths }}/{{ item.assists }}</td>
-                            {% endif %}
-
-                            <td>{{ item.time }}</td>
-                            {# <td>{{ item.position }}</td> #}
-                            {# <td>{{ item.match_type }}</td> #}
-                            <td>{{ item.match_mode }}</td>
-                            <td>{{ item.date }}</td>
-                            {# <td>{{ item.match_tilt }}</td> #}
-                            {% if item.win %}
-                                <td colspan="2"><img class="win-lose-logo" src="{{ url_for('static', filename='img/victory.png') }}" alt="victory"></td>
-                            {% else %}
-                                <td colspan="2"><img class="win-lose-logo" src="{{ url_for('static', filename='img/defeat.png') }}" alt="defeat"></td>
-                            {% endif %}
-                        </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-        </section>
-        </div>
-    </body>
+{% block extra_js %}
+    <script type="text/javascript" src="{{ url_for('static', filename='js/chart.min.js') }}" async></script>
     <script type="text/javascript">
         window.onload = function() {
             drawChart();
         };
     </script>
-</html>
+{% endblock %}
+
+{% block content %}
+    <section class="tilt-container">
+        <input type="hidden" id="tilt-value" name="tilt-value" value="{{ data.tilt_level}}">
+        <div class="tilt-container__chart">
+            <canvas id="tilt-chart"></canvas>
+        </div>
+    </section>
+
+    <hr class="separator">
+
+    <section>
+        <table class="data_table">
+            <thead>
+                <tr>
+                    <th>Champion</th>
+                    <th>KDA</th>
+                    <th>Time</th>
+                    {# <th>Lane</th> #}
+                    {# <th>Type</th> #}
+                    <th>Mode</th>
+                    <th colspan="2">Date</th>
+                    <th>Performance</th>
+                    {# <th>Tilt</th> #}
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for item in data.stats %}
+                    {% if item.pentakill %}
+                        <tr class="pentakill">
+                    {% else%}
+                        <tr>
+                    {% endif %}
+                        <td><img class="champion-logo" src="{{ item.champion_img }}" alt=""></td>
+                        {% if item.kda<1 %}
+                            <td class="kda_1">{{ item.kills }}/{{ item.deaths }}/{{ item.assists }}</td>
+                        {% elif item.kda<2 %}
+                            <td class="kda_2">{{ item.kills }}/{{ item.deaths }}/{{ item.assists }}</td>
+                        {% elif item.kda<3 %}
+                            <td class="kda_3">{{ item.kills }}/{{ item.deaths }}/{{ item.assists }}</td>
+                        {% else %}
+                            <td class="kda_4">{{ item.kills }}/{{ item.deaths }}/{{ item.assists }}</td>
+                        {% endif %}
+
+                        <td>{{ item.time }}</td>
+                        {# <td>{{ item.position }}</td> #}
+                        {# <td>{{ item.match_type }}</td> #}
+                        <td>{{ item.match_mode }}</td>
+                        <td colspan="2">{{ item.date }}</td>
+                        {% if item.kda<1 %}
+                            <td class="tilt_level tilt_level_1"><span></span></td>
+                        {% elif item.kda<2 %}
+                            <td class="tilt_level tilt_level_2"><span></span></td>
+                        {% elif item.kda<3 %}
+                            <td class="tilt_level tilt_level_3"><span></span></td>
+                        {% else %}
+                            <td class="tilt_level tilt_level_4"><span></span></td>
+                        {% endif %}
+                        {# <td>{{ item.match_tilt }}</td> #}
+                        {% if item.win %}
+                            <td><img class="win-lose-logo" src="{{ url_for('static', filename='img/victory.png') }}" alt="victory"></td>
+                        {% else %}
+                            <td><img class="win-lose-logo" src="{{ url_for('static', filename='img/defeat.png') }}" alt="defeat"></td>
+                        {% endif %}
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </section>
+{% endblock %}
+
