--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -19,15 +19,16 @@
                   <div class="form__fields">
                       <select name="region">
                           <option value="br1">BR</option>
-                          <option value="eune1">EUNE</option>
+                          <option value="eun1">EUNE</option>
                           <option value="euw1" selected="selected">EUW</option>
-                          <option value="kr1">KR</option>
-                          <option value="lan1">LAN</option>
-                          <option value="las1">LAS</option>
+                          <option value="jp1">JP</option>
+                          <option value="kr">KR</option>
+                          <option value="la1">LAN</option>
+                          <option value="la2">LAS</option>
                           <option value="na1">NA</option>
-                          <option value="oce1">OCE</option>
-                          <option value="ru1">RU</option>
+                          <option value="oc1">OCE</option>
                           <option value="tr1">TR</option>
+                          <option value="ru">RU</option>
                       </select>
 
                       <input type="text" class="" name="summoner_name" placeholder="Summoner Name" required>
@@ -41,7 +42,7 @@
         {% block content %}{% endblock %}
 
         <hr class="separator">
-        <section class="container">
+        <section class="container text-center">
             <small>
                 <p><em>Tilt-o-meter isn't endorsed by Riot Games and doesn't reflect the views or opinions of Riot Games or anyone officially involved in producing or managing League of Legends.</em></p>
                 <p><em>League of Legends and Riot Games are trademarks or registered trademarks of Riot Games, Inc. League of Legends &copy; Riot Games, Inc.</em></p>
