--- a/flaskr/static/css/tiltometer.css
+++ b/flaskr/static/css/tiltometer.css
@@ -33,6 +33,10 @@ html {
   font-size: 15pt;
 }
 
+body {
+  max-width: 1400px;
+}
+
 p {
     margin: 0.5rem 0;
     line-height: 1.5rem;
@@ -235,7 +239,7 @@ select::-ms-expand {
 }
 
 .champion-logo {
-    width: 100%;
+    width: 72%;
 }
 
 .win-lose-logo {
@@ -327,3 +331,41 @@ select::-ms-expand {
     content: "carried";
 }
 
+
+/* SPINNER */
+.lds-ripple {
+  position: absolute;
+  width: 80px;
+  height: 80px;
+  top: 50%;
+  left: 50%;
+}
+
+.lds-ripple div {
+  position: absolute;
+  border: 4px solid #ff6900;
+  opacity: 1;
+  border-radius: 50%;
+  animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+
+.lds-ripple div:nth-child(2) {
+  animation-delay: -0.5s;
+}
+
+@keyframes lds-ripple {
+  0% {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
+    opacity: 1;
+  }
+  100% {
+    top: 0px;
+    left: 0px;
+    width: 72px;
+    height: 72px;
+    opacity: 0;
+  }
+}
