--- a/flaskr/templates/tiltometer.html
+++ b/flaskr/templates/tiltometer.html
@@ -7,6 +7,7 @@
     <script type="text/javascript">
         window.onload = function() {
             drawChart();
+            toggleSpinner();
         };
     </script>
 {% endblock %}
